# AIAssistant

./: .gitignore  README.md  config_example.json  k8s_prompt.md  memory_usage.csv  mgr_exec.py  mgr_prompt.md  pc_context.md  pc_prompt.json  pc_prompt.md  pyproject.toml  schd_context.md  schd_prompt.md
src/: K8sExecutor.py  MyAssistant.py  PCExecutor.py  assist_creator.py  base_model.py  chat_history.py  cli.py  const.py  deepseek_azure.py  executor.py  httpserver.py  logger.py  open_ai.py
src/assistant/: MutiAssistant.py  MyAssistant.py  base_assistant.py
src/client/: client.py  math_client.py
src/embedding/: pdf_splitter.py
src/excutor/: K8sExecutor.py  PCExecutor.py  executor.py
src/executor/: K8sExecutor.py  PCExecutor.py  executor.py  mgr_exec.py  schd_exec.py
src/model/: base_model.py  deepseek_azure.py  deepseek_langchain.py  openai.py
src/server/: draw_server.py  math_server.py  server.py  swagger.yaml
